--- a/src/components/RightBlock/AnswerBlock/AnswerBlock.module.css
+++ b/src/components/RightBlock/AnswerBlock/AnswerBlock.module.css
@@ -40,6 +40,7 @@
 }
 
 .review_paragraph {
+  font-family: "MegaFon Graphik LC Web Reg Regular";
   color: #a0a0a0;
   font-size: 12px;
   font-style: normal;
