--- a/src/components/Question/index.module.css
+++ b/src/components/Question/index.module.css
@@ -1,16 +1,21 @@
 .row {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
+}
+
+.row_content {
+  margin-bottom: 16px;
 }
 
 .text_block {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin-top: 16px;
 }
 
 .question_title {
+  margin-top: -5px;
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -18,6 +23,8 @@
 }
 
 .answer_title {
+  font-family: "MegaFon Graphik LC Web Reg Regular";
+  margin-top: -5px;
   color: #333;
   font-size: 15px;
   font-style: normal;
@@ -26,6 +33,7 @@
 }
 
 .sub_title {
+  font-family: "MegaFon Graphik LC Web Reg Regular";
   line-height: 16px;
   color: #a0a0a0;
   display: flex;
@@ -47,13 +55,13 @@
 
 .mini_block_border {
   border-bottom: 1px solid #cbcbcb;
-  margin: 16px 0;
+  margin-bottom: 16px;
+  margin-top: 16px;
 }
 
 @media (min-width: 768px) {
   .answer_title {
     width: 510px;
-    /* margin-top: 8px; */
   }
 
   .text_block {
